--- a/kbg/kbg/templates/index.html
+++ b/kbg/kbg/templates/index.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<script type="text/javascript" src="{{MEDIA_URL}}/javascript/jquery/jquery-1.4.2.min.js"></script>
-		<script type="text/javascript" src="{{MEDIA_URL}}/javascript/jquery/jquery-ui-1.8.2.custom.min.js"></script>
-		<script type="text/javascript" src="{{MEDIA_URL}}/javascript/jquery/jquery.pagination.js"></script>
-		<script type="text/javascript" src="{{MEDIA_URL}}/javascript/js/data.js"></script>
-		<script type="text/javascript" src="{{MEDIA_URL}}/javascript/js/common.js"></script>
-		<script type="text/javascript" src="{{MEDIA_URL}}/javascript/js/index.js"></script>
-		<link rel="stylesheet" media="screen" type="text/css" href="{{MEDIA_URL}}/css/jquery-ui-1.8.2.custom.css"/>
-		<link rel="stylesheet" media="screen" type="text/css" href="{{MEDIA_URL}}/css/common.css"/>
-		<link rel="stylesheet" media="screen" type="text/css" href="{{MEDIA_URL}}/css/main.css"/>
+		<script type="text/javascript" src="../javascript/jquery/jquery-1.4.2.min.js"></script>
+		<script type="text/javascript" src="../javascript/jquery/jquery-ui-1.8.2.custom.min.js"></script>
+		<script type="text/javascript" src="../javascript/jquery/jquery.pagination.js"></script>
+		<script type="text/javascript" src="../javascript/js/data.js"></script>
+		<script type="text/javascript" src="../javascript/js/common.js"></script>
+		<script type="text/javascript" src="../javascript/js/index.js"></script>
+		<link rel="stylesheet" media="screen" type="text/css" href="../css/jquery-ui-1.8.2.custom.css"/>
+		<link rel="stylesheet" media="screen" type="text/css" href="../css/common.css"/>
+		<link rel="stylesheet" media="screen" type="text/css" href="../css/main.css"/>
 		<title>考试超市</title>
 	</head>
 	<body>
