--- a/kbg/kbg/templates/register.html
+++ b/kbg/kbg/templates/register.html
@@ -1,153 +1,111 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<script type="text/javascript" src="../javascript/jquery/jquery-1.4.2.min.js"></script>
-		<script type="text/javascript" src="../javascript/jquery/jquery-ui-1.8.2.custom.min.js"></script>
-		<script type="text/javascript" src="../javascript/jquery/jquery.pagination.js"></script>
-		<script type="text/javascript" src="../javascript/js/data.js"></script>
-		<script type="text/javascript" src="../javascript/js/common.js"></script>
-		<script type="text/javascript" src="../javascript/js/register.js"></script>
-		<link rel="stylesheet" media="screen" type="text/css" href="../css/jquery-ui-1.8.2.custom.css"/>
-		<link rel="stylesheet" media="screen" type="text/css" href="../css/common.css"/>
-		<link rel="stylesheet" media="screen" type="text/css" href="../css/main.css"/>
-		<title>考试超市</title>
-	</head>
-	<body>
-		<div id="main">
-			<div id="header">
-				<div class="logo">
-					<h1 class="text">考必过</h1>
-				</div>
-				<div class="nagviation">
-					<div class='item fleft login hidden'>登陆</div>
-					<div class='item fleft register'><a href='register.html'>注册</a></div>
-					<div class="item fleft user hidden">欢迎你,<a href='myInfo.html'>xing.lin</a></div>
-					<div class='item fleft exam'><a href='index.html'>首页</a></div>
-					<div class='item fleft exam'><a href='myPublish.html'>我发布的</a></div>
-					<div class="item fleft account"><a href='myAccount.html'>我的账户</a></div>
-					<div class="item fleft exit"><a href='logout'>退出系统</a></div>
-				</div>
-			</div><!-- end of header -->
-			<div id="content">
-				<div id='register'>
-					<div class='register-content'>
-						<form action=''>
-							<h3>注册新用户</h3>
-							<div class='registerInfo'>
-								<div class='item'>
-									<div class='title'>用户名：</div>
-									<div class='text'>
-										<input type='text' name='userName' maxlength='10' />
-									</div>
-									<div class='tip'>已经被注册</div>
-								</div>
-								<div class='item'>
-									<div class='title'>密码：</div>
-									<div class='text'>
-										<input type='password' name='userPassword' />
-									</div>
-									<div class='tip'>密码太弱</div>
-								</div>
-								<div class='item'>
-									<div class='title'>重复密码：</div>
-									<div class='text'>
-										<input type='password' name='userPasswordR' />
-									</div>
-									<div class='tip'>2次密码不一致</div>
-								</div>
-								<div class='item'>
-									<div class='title'>注册邮箱：</div>
-									<div class='text'>
-										<input type='text' name='userEmail' />
-									</div>
-									<div class='tip'>
-										邮箱格式不对
-									</div>
-								</div>
-							</div>
-							<h3>个人信息</h3>
-							<div class='userInfo'>
-								<div class='item'>
-									<div class='title'>真实姓名：</div>
-									<div class='text'>
-										<input type='text' name='userRealName' />
-									</div>
-									<div class='tip'>必须是真实姓名</div>
-								</div>
-								<div class='item'>
-									<div class='title'>性别：</div>
-									<div class='text'>
-										<input type='radio' name='userRender' value='0' />男
-										<input type='radio' name='userRender' value='1' />女
-									</div>
-									<div class='tip'></div>
-								</div>
-								<div class='item'>
-									<div class='title'>身份证号码：</div>
-									<div class='text'>
-										<input type='text' name='userID' />
-									</div>
-									<div class='tip'>必须输入正确的身份证号码</div>
-								</div>
-								<div class='item'>
-									<div class='title'>移动电话：</div>
-									<div class='text'>
-										<input type='text' name='userMobile' />
-									</div>
-									<div class='tip'>必须输入有效的手机号码</div>
-								</div>
-								<div class='item'>
-									<div class='title'>个人身份：</div>
-									<div class='text'>
-										<select name='userInfoType'>
-											<option value='0'>学生</option>
-											<option value='1'>工作</option>
-											<option value='2'>不确定</option>
-										</select>
-									</div>
-								</div>
-							</div>
-							<h3>个人更多信息</h3>
-							<div class='userInfoMore'>
-								<div class='item'>
-									<div class='title'>个人地址：</div>
-									<div class='text'>
-										<input type='text' name='userInfoProvice' />省
-										<input type='text' name='userInfoCity' />市
-										<input type='text' name='userInfoDict' />县
-										<input type='text' name='userInfoStreet' />街道
-									</div>
-								</div>
-								<div class='item'>
-									<div class='title'>
-										个人擅长科目：
-									</div>
-									<div class='text'>
-										<input type='text' name='userInfoGood1'>
-										<input type='text' name='userInfoGood2'>
-										<input type='text' name='userInfoGood3'>
-									</div>
-									<div class='tip'>请输入3个你擅长的科目</div>
-								</div>
-							</div>
-								<div class='buttons'>
-								<input type="button" value="提交" class="button blue submit">
-								<input type="button" value="重置" class="button blue reset">
-							</div>
-						</form><!-- end of form -->
+{% extends 'base.html' %}
+{% block content %}
+<div id='register'>
+	<div class='register-content'>
+		<form action=''>
+			<h3>注册新用户</h3>
+			<div class='registerInfo'>
+				<div class='item'>
+					<div class='title'>用户名：</div>
+					<div class='text'>
+						<input type='text' name='userName' maxlength='10' />
 					</div>
-				</div><!-- end of register -->
-			</div><!-- end of content -->
-			<div id="footer">
-				<div id='footer-container'>
-					<a href='aboutUs.html'>关于我们</a> |
-					<a href='contactUs.html'>联系我们</a> |
-					<a href='help.html'>帮助信息</a> |
-					<a href='hr.html'>人才招聘</a>|
-					<a href='story.html'>考试的故事</a>
+					<div class='tip'>已经被注册</div>
 				</div>
-			</div><!-- end of footer -->
-		</div>
-	</body>
-</html>
+				<div class='item'>
+					<div class='title'>密码：</div>
+					<div class='text'>
+						<input type='password' name='userPassword' />
+					</div>
+					<div class='tip'>密码太弱</div>
+				</div>
+				<div class='item'>
+					<div class='title'>重复密码：</div>
+					<div class='text'>
+						<input type='password' name='userPasswordR' />
+					</div>
+					<div class='tip'>2次密码不一致</div>
+				</div>
+				<div class='item'>
+					<div class='title'>注册邮箱：</div>
+					<div class='text'>
+						<input type='text' name='userEmail' />
+					</div>
+					<div class='tip'>
+						邮箱格式不对
+					</div>
+				</div>
+			</div>
+			<h3>个人信息</h3>
+			<div class='userInfo'>
+				<div class='item'>
+					<div class='title'>真实姓名：</div>
+					<div class='text'>
+						<input type='text' name='userRealName' />
+					</div>
+					<div class='tip'>必须是真实姓名</div>
+				</div>
+				<div class='item'>
+					<div class='title'>性别：</div>
+					<div class='text'>
+						<input type='radio' name='userRender' value='0' />男
+						<input type='radio' name='userRender' value='1' />女
+					</div>
+					<div class='tip'></div>
+				</div>
+				<div class='item'>
+					<div class='title'>身份证号码：</div>
+					<div class='text'>
+						<input type='text' name='userID' />
+					</div>
+					<div class='tip'>必须输入正确的身份证号码</div>
+				</div>
+				<div class='item'>
+					<div class='title'>移动电话：</div>
+					<div class='text'>
+						<input type='text' name='userMobile' />
+					</div>
+					<div class='tip'>必须输入有效的手机号码</div>
+				</div>
+				<div class='item'>
+					<div class='title'>个人身份：</div>
+					<div class='text'>
+						<select name='userInfoType'>
+							<option value='0'>学生</option>
+							<option value='1'>工作</option>
+							<option value='2'>不确定</option>
+						</select>
+					</div>
+				</div>
+			</div>
+			<h3>个人更多信息</h3>
+			<div class='userInfoMore'>
+				<div class='item'>
+					<div class='title'>个人地址：</div>
+					<div class='text'>
+						<input type='text' name='userInfoProvice' />省
+						<input type='text' name='userInfoCity' />市
+						<input type='text' name='userInfoDict' />县
+						<input type='text' name='userInfoStreet' />街道
+					</div>
+				</div>
+				<div class='item'>
+					<div class='title'>
+						个人擅长科目：
+					</div>
+					<div class='text'>
+						<input type='text' name='userInfoGood1'>
+						<input type='text' name='userInfoGood2'>
+						<input type='text' name='userInfoGood3'>
+					</div>
+					<div class='tip'>请输入3个你擅长的科目</div>
+				</div>
+			</div>
+				<div class='buttons'>
+				<input type="button" value="提交" class="button blue submit">
+				<input type="button" value="重置" class="button blue reset">
+			</div>
+		</form><!-- end of form -->
+	</div>
+</div><!-- end of register -->
+{% endblock %}
