--- a/kbg/kbg/templates/index.html
+++ b/kbg/kbg/templates/index.html
@@ -5,7 +5,7 @@
 	</div><!-- end of msg -->
 	<div class='publishExam'>
 		<div class='publishExamCase fleft'><div class='examCase'></div></div>
-		<input type="button" value="发布考试信息" class="button blue fright" />	
+		<input type="button" value="发布考试信息" class="button blue fright" />
 	</div>
 	<div id='msgsContainer'>
 		<div class='options'>
@@ -16,7 +16,8 @@
 					<input type='radio' name='offer' value='0' />求
 				</div>
 				<div id='examDay' class='fleft item'>
-					考试时间：<input type='text' /><div id='calendar'></div>
+					考试时间：<input type='text' />
+					<!--<div id='calendar'></div>-->
 				</div>
 				<div class='examAddress fleft item'>
 					考试地点：<input type='text' />
