--- a/kbg/kbg/templates/base.html
+++ b/kbg/kbg/templates/base.html
@@ -20,9 +20,9 @@
 					<h1 class="text">考必过</h1>
 				</div>
 				<div class="nagviation">
-					<div class='item fleft login hidden'>登陆</div>
+					<div class='item fleft login'>登陆</div>
 					<div class='item fleft register'><a href='register.html'>注册</a></div>
-					<div class="item fleft user hidden">欢迎你,<a href='myInfo.html'>xing.lin</a></div>
+					<div class="item fleft user">欢迎你,<a href='myInfo.html'>xing.lin</a></div>
 					<div class='item fleft exam'><a href='index.html'>首页</a></div>
 					<div class='item fleft exam'><a href='myPublish.html'>我发布的</a></div>
 					<div class="item fleft account"><a href='myAccount.html'>我的账户</a></div>
