--- a/kbg/kbg/templates/new_order.html
+++ b/kbg/kbg/templates/new_order.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div id='publish-new-order'>
+	<h2>发布新的考试信息</h2>
+	<div class='new-order-form'>
+		{{form.as_p}}
+	</div>
+</div>
 {% endblock %}
