--- a/kbg/kbg/media/css/common.css
+++ b/kbg/kbg/media/css/common.css
@@ -3,7 +3,7 @@ body{ padding:0; border:0; margin:0;}
 .clear{ clear:both;}
 .fleft{ float:left;}
 .fright{ float:right;}
-.errorlist{ color:red; display:hidden;}
+.errorlist{ color:red; display:none;}
 .close{ cursor:pointer; width:20px; text-align:center;}
 table{ width:100%; padding:10px 0;}
 table tr{ cursor:pointer;}
